@@ -148,6 +148,10 @@ int mdb_dn2id_walk(
 	Operation *op,
 	struct IdScopes *isc );
 
+void mdb_dn2id_wrestore(
+	Operation *op,
+	struct IdScopes *isc );
+
 MDB_cmp_func mdb_dup_compare;
 
 /*
