@@ -4,6 +4,7 @@ OpenLDAP 2.4.42 Engineering
 	Fixed liblber address length for CLDAP (ITS#8158)
 	Fixed libldap dnssrv potential overflow with port number (ITS#7027,ITS#8195)
 	Fixed slapd cn=config when updating olcAttributeTypes (ITS#8199)
+	Fixed slapd-mdb to correctly update search candidates for scoped searches (ITS#8203)
 	Fixed slapo-ppolicy with redundant mod ops on glued trees (ITS#8184)
 	Added libldap LDAPSTACKGUARD feature (ITS#8201)
 	Fixed slapd-ldap segfault after failed retry (ITS#8173)
